--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,16 +1,10 @@
 spring:
-  servlet:
-    multipart:
-      enabled: true
-      max-file-size: 10MB    # Maximum file size allowed
-      max-request-size: 10MB # Maximum request size allowed
-
   application:
     name: chef
   datasource:
-    url: ${dbUrl}
-    username: ${username}
-    password: ${password}
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
