--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
-# Database Configuration
 DB_URL=jdbc:mysql://localhost:3306/Yolo_Chef
 DB_USERNAME=root
 DB_PASSWORD=123456
 
+ApiKey=AIzaSyBSOrfdfZExRUMIfIB_p1pT8FBJgfwl_NI
+GeminiUrl=https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=
+
+JwtIssuerURI=http://localhost:8083/realms/Yolo
+JwtSetURI=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
