--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
-
+### STS ###
+.env
 # Package Files #
 *.jar
 *.war
@@ -25,4 +26,4 @@ replay_pid*
 
 .idea/
 .target/
-.env/
+
