--- a/src/main/resources/db/changelog/db.changelog-recipe.yaml
+++ b/src/main/resources/db/changelog/db.changelog-recipe.yaml
@@ -179,4 +179,86 @@ databaseChangeLog:
               - column:
                   name: currency_id
                   value: 1
+  - changeSet:
+      id: schema-recipe-data-0.0.2
+      author: vendor_team
+      changes:
+        - insert:
+            tableName: recipe
+            columns:
+              - column:
+                  name: id
+                  value: 3
+              - column:
+                  name: name
+                  value: "Pizza"
+              - column:
+                  name: description
+                  value: "A classic Italian pizza."
+              - column:
+                  name: price
+                  value: 1500
+              - column:
+                  name: serving_size
+                  value: 4
+              - column:
+                  name: created_at
+                  value: '2024-08-23T12:00:00'
+              - column:
+                  name: updated_at
+                  value: '2024-08-23T12:00:00'
+              - column:
+                  name: code
+                  value: "PIZZA001"
+              - column:
+                  name: user_id
+                  value: 3
+              - column:
+                  name: idea_id
+                  value: 2
+              - column:
+                  name: recipe_status_id
+                  value: 1
+              - column:
+                  name: currency_id
+                  value: 1
+        - insert:
+            tableName: recipe
+            columns:
+              - column:
+                  name: id
+                  value: 4
+              - column:
+                  name: name
+                  value: "Sindhi Biryani"
+              - column:
+                  name: description
+                  value: "A classic Sindhi Biryani with a rich and savory chilli sauce."
+              - column:
+                  name: price
+                  value: 100
+              - column:
+                  name: serving_size
+                  value: 5
+              - column:
+                  name: created_at
+                  value: '2024-08-23T12:00:00'
+              - column:
+                  name: updated_at
+                  value: '2024-08-23T12:00:00'
+              - column:
+                  name: code
+                  value: "SNBRYNI0"
+              - column:
+                  name: user_id
+                  value: 3
+              - column:
+                  name: idea_id
+                  value: 2
+              - column:
+                  name: recipe_status_id
+                  value: 1
+              - column:
+                  name: currency_id
+                  value: 1
 
