--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_PASSWORD=Amna@123
-DB_USERNAME=bankuser
-DB_URL=jdbc:mysql://127.0.0.1:3306/yolo_chef_be
+DB_URL=jdbc:mysql://localhost:3306/Yolo_Chef
+DB_USERNAME=root
+DB_PASSWORD=123456
 
-ApiKey=AIzaSyBSOrfdfZExRUMIfIB_p1pT8FBJgfwl_NI
+ApiKey=AIzaSyDCpW9rjKJ4srPHlypXlQyH8xNWaKiNekQ
 GeminiUrl=https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=
 
 JwtIssuerURI=http://localhost:8083/realms/Yolo
