--- a/src/main/resources/db/changelog/db.changelog-user.yaml
+++ b/src/main/resources/db/changelog/db.changelog-user.yaml
@@ -77,3 +77,27 @@ databaseChangeLog:
               - column:
                   name: updated_at
                   value: '2000-01-01T12:00:00'
+        - insert:
+            tableName: user
+            columns:
+              - column:
+                  name: id
+                  value: 2
+              - column:
+                  name: username
+                  value: DaudChef
+              - column:
+                  name: email
+                  value: daud@gmail.com
+              - column:
+                  name: role_id
+                  value: 1
+              - column:
+                  name: is_deleted
+                  value: 0
+              - column:
+                  name: created_at
+                  value: '2000-01-01T12:00:00'
+              - column:
+                  name: updated_at
+                  value: '2000-01-01T12:00:00'
