--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,13 @@
 			<artifactId>logback-classic</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+
+
 
 	</dependencies>
 
